Next release:
add: "out files" tab now contains a form to display diffs between two selected
     instanciation chains
add: genet exec --force option: remove previously instanciated chain to
     re-execute. Useful in manual mode, when setting up interfaces.
fix: verify syntactic correctness of filetype names before adding
fix: various error handling
mod: genet init-dir now creates a default configuration file in the
     given project directory; update doc accordingly
mod: when an interface takes a directory in output parameter, the
     directory is created before calling the interface

0.2:
fix: fix handling of explode/implode ("foreach" construction)
add: use type system to ensure use of absolute filenames
add: "genet query fchains"
add: "genet query inputs"
add: "genet query chains"
add: "genet query ichains"
fix: "genet query filetypes" outputs to stdout instead of stderr
add: bash completion script (website/genet-bash-completion.sh)
mod: genet-exec is replaced by subcommand exec of genet
mod: genet-diff is replaced by subcommand diff of genet
mod: genet-query is replaced by subcommand query of genet
mod: genet-chain is replaced by subcommands chain, flatten
     and flatten-all of genet